fix login and updatePassword
